menu sticky listo

--- a/presupuesto.html
+++ b/presupuesto.html
@@ -81,5 +81,6 @@
             <p class="blanco">Todos los derechos reservados. 2021</p>
         </footer>
     </div>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
