--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="css/comun.css">
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="contenedor-global">
-        <header>
+        <header id="header">
             <div class="caja-logo">
                 <a href="index.html" title="home"><h1 class="logo">MFE</h1></a>
             </div>
@@ -79,5 +79,6 @@
             <p class="blanco">Todos los derechos reservados. 2021</p>
         </footer>
     </div>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
