continuo con el aside

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
               </div>
         </header>
         <main>
-            <aside id="noticias"></aside>
+            <aside class="noticias">
+                <p>Noticias</p>
+            </aside>
             <div class="contenedor-secundario">
                 <section class="bienvenida">
                     <h1>Hola!</h1>
