El aside va bastente bien

--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@
         </header>
         <main>
             <aside class="noticias">
+                <div class="content-p-noticias">
                 <p>Noticias</p>
-            </aside>
+                
+                </div>
+            </aside>            
             <div class="contenedor-secundario">
                 <section class="bienvenida">
                     <h1>Hola!</h1>
