Ya ponemos los titulares

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="category" content="Spanish, Spain, Desarrollo web">   
     <title>Portfolio de Manuel Fernández Esteban</title>
 </head>
-<body>
+<body onload="cargarNoticia()">
     <div class="contenedor-global">
         <header id="header">
             <div class="caja-logo">
@@ -48,7 +48,7 @@
             <aside class="noticias">
                 <div class="content-p-noticias">
                 <p>Noticias</p>
-                
+                <div id="cajaNoticias"></div>                
                 </div>
             </aside>            
             <div class="contenedor-secundario">
