terminando con las noticias

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
         </header>
         <main>
             <aside class="noticias">
-                <div class="content-p-noticias">
-                <p>Noticias</p>
-                <div id="cajaNoticias"></div>                
+                <div class="caja-disparador">
+                    <p id="despligue">Noticias</p> 
+                    <div id="cajaNoticias"></div>                                   
                 </div>
+                
             </aside>            
             <div class="contenedor-secundario">
                 <section class="bienvenida">
