aside correcto en todas las resoluciones

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <aside class="noticias">
                 <div class="caja-disparador">
                     <p id="despligue">Noticias</p> 
-                    <div id="cajaNoticias"></div>                                   
+                    <div id="cajaNoticias"></div>                                 
                 </div>
                 
             </aside>            
-            <div class="contenedor-secundario">
+            <div id="contenedor-secundario" class="contenedor-secundario">
                 <section class="bienvenida">
                     <h1>Hola!</h1>
                     <p class="parrafo-bienvenida">
