comienzo la carga AJAX

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </nav>
               </div>
         </header>
-        <main>
+        <main id="main">
             <aside class="noticias">
                 <div class="caja-disparador">
                     <p id="despligue">Noticias</p> 
@@ -76,7 +76,7 @@
                     <img class="miniatura-bienvenida" src="img/offbeat-home.PNG" alt="imagen home">
                 </section>
             </div>
-
+            <div id="caja"></div>
         </main>
         <footer>            
             <div class="caja-logo">
