--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                 </nav>
               </div>
         </header>
-        <main>
+        <main id="main">
             <section id="peluqueria" class="portfolio">
                 <h1>Trabajos</h1>
                 <div class="caja-portfolio"> 
