navegacion concluida, surge problema con aside

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <nav>
                   <ul>
                     <li><div class="espacio"><a href="#"></a></div></li>
-                    <li><a href="cuerpoInicio.html" target="_self">Home</a></li>
-                    <li><a href="cuerpoPortfolio.html" target="_self">Portfolio</a></li>
-                    <li><a href="cuerpoContacto.html" target="_self">Contacto</a></li>
-                    <li><a href="cuerpoPresupuesto.html" target="_self">Presupuesto</a></li>                    
+                    <li><a class="menu-enlace" href="cuerpoInicio.html" target="_self">Home</a></li>
+                    <li><a class="menu-enlace" href="cuerpoPortfolio.html" target="_self">Portfolio</a></li>
+                    <li><a class="menu-enlace" href="cuerpoContacto.html" target="_self">Contacto</a></li>
+                    <li><a class="menu-enlace" href="cuerpoPresupuesto.html" target="_self">Presupuesto</a></li>                    
                   </ul>
                 </nav>
               </div>
