no consigo desplegar el aside

--- a/cuerpoInicio.html
+++ b/cuerpoInicio.html
@@ -1,7 +1,7 @@
 
     <aside class="noticias">
         <div class="caja-disparador">
-            <p id="despligue">Noticias</p> 
+            <p >Noticias</p></a> 
             <div id="cajaNoticias"></div>                                 
         </div>
         
