arreglando las noticias

--- a/cuerpoInicio.html
+++ b/cuerpoInicio.html
@@ -1,7 +1,7 @@
 
-    <aside class="noticias">
+    <aside id="noticias" class="noticias">
         <div class="caja-disparador">
-            <p >Noticias</p></a> 
+            <p id="disparador" >Noticias</p></a> 
             <div id="cajaNoticias"></div>                                 
         </div>
         
@@ -31,3 +31,4 @@
         </section>
     </div>
     <div id="caja"></div>
+    
