--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Portfolio de Manuel Fernández Esteban</title>
 </head>
 <body>
-    <div class="contenedor-global">
+    <div id="contenedor-global" class="contenedor-global">
         <header id="header">
             <div class="caja-logo">
                 <a href="cuerpoInicio.html" title="home"><h1 class="logo">MFE</h1></a>
