--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
         <main id="main">
 
         </main>
-        <div id="cajaBienvenida">
-            <div class="bandaSuperior"></div>
-            <div class="contenedor">
-                <div class="contenido">
-                    <h3>Bienvenidos!</h3>
-                    <p>Gracias por visitar mi portfolio</p>
-
+        <div class="cajaBienvenida">
+            <div class="pop-up">
+                <div class="bandaSuperior">                    
                 </div>
-                <button class="boton">Cerrar</button>
-                <div class="caja-logo">
-                    <h1 class="logo">MFE</h1>
+                <div class="contenedor-popup">
+                    <div class="contenido-popup">
+                        <h3>Bienvenidos!</h3>
+                        <p>Gracias por visitar mi portfolio</p>
+                        <button id="boton-bienvenida" class="boton">Cerrar</button>
+                    </div>                    
+                    <h1 class="logo-bienvenida">MFE</h1>                    
                 </div>
             </div>
         </div>
-</body>
+
 <!--<script>
     $(document).ready(function () {
         $('.boton').on('click', function (e) {
@@ -77,6 +77,7 @@
         });
     })
 </script>-->
+</body>
 <footer>
     <div class="caja-logo">
         <a href="cuerpoInicio.html" title="home">
