bienvenida estilada funcionando en los tres navegadores

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <main id="main">
 
         </main>
-        <div class="cajaBienvenida">
+        <div class="caja-bienvenida">
             <div class="pop-up">
                 <div class="bandaSuperior">                    
                 </div>
