--- a/galeria.html
+++ b/galeria.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="css/comun.css">
     <link rel="stylesheet" href="css/css-reset.css">
     <title>Document</title>
@@ -22,6 +23,7 @@
             </div>
             <div class="galeria">
                 <div class="ficha">
+                    <div class="cruz-galeria"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/peluqueria-donde-1200.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -69,6 +71,7 @@
 
 
     </section>
-</body>
+    <script src="js/scripts.js"></script>
+    </body>
 
 </html>
