continuo con la galeria

--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/comun.css">
+    <link rel="stylesheet" href="css/galeria.css">
     <link rel="stylesheet" href="css/css-reset.css">
     <title>Document</title>
 </head>
@@ -23,7 +23,7 @@
             </div>
             <div class="galeria">
                 <div class="ficha">
-                    <div class="cruz-galeria"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/peluqueria-donde-1200.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -71,7 +71,7 @@
 
 
     </section>
-    <script src="js/scripts.js"></script>
+    <script src="js/eventos.js"></script>
     </body>
 
 </html>
