atascado en la galeria

--- a/galeria.html
+++ b/galeria.html
@@ -31,6 +31,7 @@
                     </div>
                 </div>
                 <div class="ficha">
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/peluqueria-home-1024.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -38,6 +39,7 @@
                     </div>
                 </div>
                 <div class="ficha">
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/peluqueria-home-1200.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -45,6 +47,7 @@
                     </div>
                 </div>
                 <div class="ficha">
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/serviciosMovil.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -52,6 +55,7 @@
                     </div>
                 </div>
                 <div class="ficha">
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/estamosMovil.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
@@ -59,6 +63,7 @@
                     </div>
                 </div>
                 <div class="ficha">
+                    <div class="in"><img src="ico/002-cancel.svg" alt="menu cerrar"></div>
                     <div class="img"><img src="img/homeMovil.PNG" alt=""></div>
                     <div class="texto-imagen">
                         <h5>Encabezado texto imagen</h5>
