empezando con el mapa

--- a/index.html
+++ b/index.html
@@ -70,26 +70,22 @@
             </div>
         </div>
 
-<!--<script>
-    $(document).ready(function () {
-        $('.boton').on('click', function (e) {
-            window.close();
-        });
-    })
-</script>-->
-</body>
-<footer>
-    <div class="caja-logo">
-        <a href="cuerpoInicio.html" title="home">
-            <h1 class="logo">MFE</h1>
-        </a>
+        
+        <footer>
+        <div class="caja-logo">
+            <a href="cuerpoInicio.html" title="home">
+                <h1 class="logo">MFE</h1>
+            </a>
 
-    </div>
-    <p class="blanco">Todos los derechos reservados. 2021</p>
-</footer>
+        </div>
+        <p class="blanco">Todos los derechos reservados. 2021</p>
+        </footer>
+
+
 </div>
+<script type="text/JavaScript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKM9W66UL5ENSfoAiajVbE4fRuhwXsgoU"></script>
 <script src="js/scripts.js"></script>
-
 </body>
+
 
 </html>
