empezando con el menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <h1 class="logo">MFE</h1>
                 </a>
             </div>
+            <p id="opcion"></p>
             <nav class="menu">
                 <ul class="lista-menu">
                     <li><a class="menu-enlace seleccionado" href="cuerpoInicio.html" title="Home">Home</a></li>
@@ -42,7 +43,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <div class="espacio"><a href="#"></a></div>
+                            <div class="espacio"></div>
                         </li>
                         <li><a class="menu-enlace" href="cuerpoInicio.html" target="_self">Home</a></li>
                         <li><a class="menu-enlace" href="cuerpoPortfolio.html" target="_self">Portfolio</a></li>
