continuando con la galeria, añado json

--- a/galeria.html
+++ b/galeria.html
@@ -25,9 +25,9 @@
                 <div class="contenedor">
                   <h2 class="subtitulo">Galería</h2>
                   <div class="contenedor-galeria">                       
-                    <img src="img/peluqueria-donde-1200.PNG" alt="" class="img-galeria">
-                    <img src="img/peluqueria-home-1024.PNG" alt="" class="img-galeria">
-                    <img src="img/peluqueria-home-1200.PNG" alt="" class="img-galeria">                   
+                    <img src="img/peluqueria-donde-1200.PNG" alt="" numero="" class="img-galeria">
+                    <img src="img/peluqueria-home-1024.PNG" alt="" numero="" class="img-galeria">
+                    <img src="img/peluqueria-home-1200.PNG" alt="" numero="" class="img-galeria">                   
                   </div>
                 </div>
               </section>
