integrando la  galeria en el portfolio

--- a/galeria.html
+++ b/galeria.html
@@ -25,9 +25,9 @@
                 <div class="contenedor">
                   <h2 class="subtitulo">Galería</h2>
                   <div class="contenedor-galeria">                       
-                    <img src="img/peluqueria-donde-1200.PNG" alt="" numero="" class="img-galeria">
-                    <img src="img/peluqueria-home-1024.PNG" alt="" numero="" class="img-galeria">
-                    <img src="img/peluqueria-home-1200.PNG" alt="" numero="" class="img-galeria">                   
+                    <img src="" alt="" numero="" class="img-galeria">
+                    <img src="" alt="" numero="" class="img-galeria">
+                    <img src="" alt="" numero="" class="img-galeria">                   
                   </div>
                 </div>
               </section>
@@ -36,10 +36,10 @@
                 <i class="fas fa-times close"></i>
                 <div class="container">
                     <div class="agregar-texto">
-                        <h1>Encabezado imagen</h1>
-                        <p>Texto explicativo de la imagen</p>
+                        <h1></h1>
+                        <p></p>
                     </div>
-                    <img src="./img/img-3.jpg" alt="" class="imagen">
+                    <img src="" alt="" class="imagen">
                 </div>
                 
               </section>
@@ -50,6 +50,11 @@
 
     </section>
     <script src="js/eventos-galeria.js"></script>
-    </body>
+    <script>
+      $(document).ready(function(){
+        traerFotos();
+      });
+    </script>
+  </body>
 
 </html>
