--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <script src="js/eventos.js"></script>
 <script src="js/funcionesmapa.js"></script>
 <script src="js/calculopresupuesto.js"></script>
+<script src="js/eventos-galeria.js"></script>
 </body>
 
 
