--- a/cuerpoPortfolio.html
+++ b/cuerpoPortfolio.html
@@ -73,7 +73,7 @@
     </section>
     <script src="js/eventos-galeria.js"></script>
     <script>
-      $(document).ready(function(){
-        traerFotos();
-      });
+        $(document).ready(function(){
+            iniciarGaleria();
+        })
     </script>
