modifico carga fotos con  json

--- a/cuerpoInicio.html
+++ b/cuerpoInicio.html
@@ -18,14 +18,12 @@
             </p> 
         </section>
         <section class="trabajos">
-            <div class="item-trabajo">
-                <a class="nodecoracion" href="portfolio.html#peluqueria">
-                    <h2>Peluquería y estética Isabel</h2>
-                </a>                    
+            <div class="item-trabajo">                
+                    <h2>Peluquería y estética Isabel</h2>                                  
             </div>
             <img class="miniatura-bienvenida" src="img/peluqueria-home-1024.PNG" alt="imagen home">
             <div class="item-trabajo">
-                <a class="nodecoracion" href="portfolio.html#offbeat"><h2>Portfolio OffBeat Fotovisuales</h2></a>                                          
+                <h2>Portfolio OffBeat Fotovisuales</h2>                                         
             </div>
             <img class="miniatura-bienvenida" src="img/offbeat-home.PNG" alt="imagen home">
         </section>
