trabajo javascript terminado

--- a/cuerpoPortfolio.html
+++ b/cuerpoPortfolio.html
@@ -40,9 +40,9 @@
                         También aquí se tienen muy encuenta la base para el posicionamiento SEO. 
                     </p>
                 </div> 
-                <section class="galeria" id="portafolioOffBeat">
+                <section class="galeria" >
                         <div class="contenedor">                      
-                        <div class="contenedor-galeria">                       
+                        <div class="contenedor-galeria" id="portafolioOffbeat">                       
                             <img src="" alt="" numero="" trabajo="" class="img-galeria">
                             <img src="" alt="" numero="" trabajo="" class="img-galeria">
                             <img src="" alt="" numero="" trabajo="" class="img-galeria">                  
