mejorando la galeria

--- a/cuerpoPortfolio.html
+++ b/cuerpoPortfolio.html
@@ -1,13 +1,12 @@
 
-    <section id="peluqueria" class="portfolio">
+    <section class="portfolio">
         <h1>Trabajos</h1>
         <div class="caja-portfolio">             
             <article class="trabajo">
-                <div class="resumen-trabajo">
-                    <h2>Peluquería y estética Isabel</h2>
+                <div class="resumen-trabajo" id="peluqueria">
+                    <h2></h2>
                     <p>
-                        Mi primer trabajo "profesional", diseño completo movil-first 
-                        sentando las bases para el posicionamiento SEO.
+                        
                     </p>
                 </div>
                 <section class="galeria">
@@ -31,13 +30,10 @@
                 </section>
             </article>
             <article class="trabajo">
-                <div class="resumen-trabajo">
-                    <h2>OffBeat Fotovisuales</h2>
+                <div class="resumen-trabajo" id="offbeat">
+                    <h2></h2>
                     <p>
-                        Mi segundo trabajo "profesional", deuda pendiente por fin resuelta,
-                        diseño pensado para desktop, ya que es en una pantalla grande donde podemos apreciar el trabajo realizado 
-                        por los fotógrafos. En este trabajo nace la idea de usar un slider para ver imagenes sin usar Javascript.
-                        También aquí se tienen muy encuenta la base para el posicionamiento SEO. 
+                         
                     </p>
                 </div> 
                 <section class="galeria" >
