--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/css-reset.css">
     <link rel="stylesheet" href="css/comun.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +26,10 @@
                 <a href="cuerpoInicio.html" title="home">
                     <h1>MFE</h1>
                 </a>
-            </div>            
+            </div>  
+            
+           
+
             <nav class="menu">
                 <ul>
                     <li><a class="menu-enlace seleccionado" href="cuerpoInicio.html" title="Home">Home</a></li>
@@ -32,6 +37,8 @@
                     <li><a class="menu-enlace" href="cuerpoContacto.html"
                             title="Datos de contacto y redes sociales">Contacto</a></li>
                     <li><a class="menu-enlace" href="cuerpoPresupuesto.html" title="Pide un presupuesto">Presupuesto</a>
+                    </li>
+                    <li><a class="menu-enlace" href="cuerpoLogin.html" title="Area de usuarios">Usuarios</a>
                     </li>
                 </ul>
             </nav>
@@ -49,6 +56,8 @@
                         <li><a class="menu-enlace" href="cuerpoPortfolio.html" target="_self">Portfolio</a></li>
                         <li><a class="menu-enlace" href="cuerpoContacto.html" target="_self">Contacto</a></li>
                         <li><a class="menu-enlace" href="cuerpoPresupuesto.html" target="_self">Presupuesto</a></li>
+                        <li><a class="menu-enlace" href="cuerpoLogin.html" title="Area de usuarios">Usuarios</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -90,6 +99,8 @@
 <script src="js/funcionesmapa.js"></script>
 <script src="js/calculopresupuesto.js"></script>
 <script src="js/eventos-galeria.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 </body>
 
 
