--- a/cuerpoLogin.html
+++ b/cuerpoLogin.html
@@ -1,31 +1,24 @@
-<div class="container mt-5">
-    <div class="row col-12 col-lg-7">
+<div class="contenedor-login">
+    <h1>Acceso al área de usuarios</h1>
 
-        <form method="POST" class="col col-lg-12 mt-5 mb-5 align-self-center" id="formularioLogin">
-            <h2>Acceso al área de usuarios</h2>
-            <div class="row mb-3">
-                <label for="Usuario" class="col-sm-2 col-form-label">Usuario </label>
-                <div class="col-sm-10 col-12">
-                    <input type="text" class="form-control" id="Usuario" name="Usuario" require>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <label for="Password" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="Password" name="Password">
-                </div>
-            </div>
-            <button type="button" id="enviar" class="btn btn-primary" onclick="logearUsuario()">Login</button>
-            <div class="row col-6">
-                <p>¿No tienes cuenta?</p>
-                <button type="button" id="BtnNuevoUsuario" class="btn btn-primary" onclick="enviarANuevoUsuario()">Regístrate</button>
-                
-            </div>
-        </form>
-
-
+    <form id="formularioLogin" class="formularioLogin" name="formularioLogin" method="post">
+        <div class="caja-formulario-login">
+            <p><label for="Usuario">Usuario:</label><br>
+                <input class="input-formulario" type="text" name="Usuario" id="Usuario" required>
+            </p>
+            <p><label for="Password">Password:</label><br>
+                <input class="input-formulario" type="password" name="Password" id="Password" required>
+            </p>  
+        </div>
+    </form>
+    <div class="caja-botones-login">
+        <button type="button" id="enviar" class="boton" onclick="logearUsuario()">Login</button>
+        <p>¿No tienes cuenta?</p>
+        <button type="button" id="BtnNuevoUsuario" class="boton"
+            onclick="enviarANuevoUsuario()">Regístrate</button>
     </div>
 </div>
+
 <script src="js/scriptsLogin.js">
 
 
