edicion del perfil de usuarios listo, refactorizacion de la validacion de formularios

--- a/cuerpoContacto.html
+++ b/cuerpoContacto.html
@@ -32,7 +32,7 @@
     </section>
     <section class="general">
         <h2>Déjame un comentario</h2>
-        <form id="formularioContacto" name="formularioContacto" method="post" action="">
+        <form id="formularioContacto" name="formularioContacto" method="POST">
             <p><label for="nombre">Nombre:</label><br>
                 <input class="input-formulario" type="text" name="nombre" id="nombre" placeholder="Manuel">
             </p>
