--- a/cuerpoLogin.html
+++ b/cuerpoLogin.html
@@ -4,10 +4,10 @@
     <form id="formularioLogin" class="formularioLogin" name="formularioLogin" method="post">
         <div class="caja-formulario-login">
             <p><label for="Usuario">Usuario:</label><br>
-                <input class="input-formulario" type="text" name="Usuario" id="Usuario" required>
+                <input class="input-formulario" type="text" name="usuario" id="Usuario" required>
             </p>
             <p><label for="Password">Password:</label><br>
-                <input class="input-formulario" type="password" name="Password" id="Password" required>
+                <input class="input-formulario" type="password" name="password" id="Password" required>
             </p>  
         </div>
     </form>
