--- a/cuerpoPresupuesto.html
+++ b/cuerpoPresupuesto.html
@@ -14,7 +14,7 @@
                             <p><label for="email">Correo:</label><br>
                             <input class="input-formulario" type="email" name="email" id="email" placeholder="manuel@tucorreo.com" required></p>
                             <p><label for="movil">Teléfono movil:</label><br>
-                            <input class="input-formulario" type="tel" name="movil" id="movil" required></p>
+                            <input class="input-formulario" type="tel" name="telefono" id="movil" required></p>
                         </fieldset> 
                     </div>
                     <div>    
