--- a/usuarios.html
+++ b/usuarios.html
@@ -8,28 +8,28 @@
 
 <div>
 
-    <form method="POST" class="formularioLogin" id="formularioPerfilUsuario">
+    <form method="POST" class="formularioLogin" id="formularioPerfilUsuario" name="formularioPerfilUser">
 
         <p>
             <label for="usuarioPerfil">Usuario </label><br>
-            <input type="text" class="input-formulario" id="usuarioPerfil" name="usuarioPerfil" readonly>            
+            <input type="text" class="input-formulario" id="usuarioPerfil" name="usuario" readonly>            
         </p>        
         <p>
             <label for="nombrePerfil">Nombre </label><br>
-            <input type="text" class="input-formulario" id="nombrePerfil" name="nombrePerfil" required>
+            <input type="text" class="input-formulario" id="nombrePerfil" name="nombre" required>
         </p>
 
         <p>
             <label for="apellidosPerfil" class="col-sm-2 col-form-label">Apellidos </label><br>
-            <input type="text" class="input-formulario" id="apellidosPerfil" name="apellidosPerfil" required>
+            <input type="text" class="input-formulario" id="apellidosPerfil" name="apellidos" required>
         </p>
         <p>
             <label for="emailPerfil">Email </label><br>
-            <input type="email" class="input-formulario" id="emailPerfil" name="emailPerfil" required>
+            <input type="email" class="input-formulario" id="emailPerfil" name="email" required>
         </p>
         <p>
             <label for="movilPerfil">Telefono </label><br>
-            <input type="text" class="input-formulario" id="movilPerfil" name="movilPerfil" required>
+            <input type="text" class="input-formulario" id="movilPerfil" name="telefono" required>
         </p>
 
     </form>
