--- a/usuarios.html
+++ b/usuarios.html
@@ -4,8 +4,8 @@
         <input type="button" class="boton" value="Citas" id="btnCitas" onclick="cargarCitas()">
         <input type="button" class="boton" value="Admin" id="btnAdmin">
     </div>
-
-    <div>
+    <h1>Perfil</h1>
+    <div class="boxPerfil">
 
         <form method="POST" class="formularioLogin" id="formularioPerfilUsuario" name="formularioPerfilUser">
 
@@ -41,7 +41,32 @@
 
     <h1>Citas</h1>
     <div class="divTable">
-        
+
+    </div>
+
+
+    <div class="boxCitas">
+        <form method="POST" class="formularioLogin" id="formulariocitasUsuario" name="formularioCitasUser">
+
+            <p>
+                <label for="selectCitas">Seleccione una cita para editar</label>
+                <select name="selectCitas" id="selectCitas" onchange="cargarCita()"></select>
+            </p>
+
+            <p>
+                <label for="fechaCita">Fecha de la cita</label>
+                <input type="date" class="input-formulario" id="fechaCita" name="fechaCita">
+            </p>
+            <p>
+                <label for="motivoCita">Motivo</label>
+                <input type="text" class="input-formulario" name="motivoCita" id="motivoCita">
+            </p>
+        </form>
+        <div class="caja-botones-login">
+            <button type="button" id="enviarCitaUser" class="boton" onclick="enviarCitaUser()">Enviar</button><br>
+            <button type="button" id="botonResetAltaUser" class="boton" onclick="resetCitaUser()">Cancelar</button>
+        </div>
+
     </div>
 
 </div>
