avanzando en la edicion de citas

--- a/usuarios.html
+++ b/usuarios.html
@@ -64,6 +64,7 @@
         </form>
         <div class="caja-botones-login">
             <button type="button" id="enviarCitaUser" class="boton" onclick="enviarCitaUser()">Enviar</button><br>
+            <button type="button" id="editarCitaUser" class="boton" onclick="editarCitaUser()" disabled>Editar</button><br>
             <button type="button" id="botonResetAltaUser" class="boton" onclick="resetCitaUser()">Cancelar</button>
         </div>
 
