--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 <script src="js/calculopresupuesto.js"></script>
 <script src="js/eventos-galeria.js"></script>
 <script src="js/clases.js"></script>
+<script src="js/scriptsLogin.js"></script>
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>-->
 
 </body>
