Edicion de citas lista a falta de restriccion de las 72 horas, pero la consulta esta resulta

--- a/cuerpoPresupuesto.html
+++ b/cuerpoPresupuesto.html
@@ -68,7 +68,7 @@
                         <textarea  name="mensaje" id="mensaje" cols="39" rows="10"></textarea></p>
                         <p><input type="checkbox" name="lopd" id="lopd" onchange="mirarLopd(this)"><label for="lopd"> Acepte nuestra política de privacidad</label></p>
                         <div class="botones">                    
-                            <input id="btnSubmit" class="boton" type="submit" value="enviar" disabled=true onclick="validar(this.form);return false">
+                            <input id="btnSubmit" class="boton" type="submit" value="enviar" disabled onclick="validar(this.form);return false">
                             <input id="btnReset" class="boton" type="reset" value="borrar" onclick="resetbtnSubmmit()">
                         </div>
                     </div>
