--- a/usuarios.html
+++ b/usuarios.html
@@ -53,15 +53,10 @@
                 <select name="selectCitas" id="selectCitas" onchange="cargarCita()">
                     <option value="-1">Selecciona una cita</option>
                 </select>
-            </p>
-
+            </p>           
             <p>
-                <label for="fechaCita">Fecha de la cita</label>
-                <input type="date" class="input-formulario" id="fechaCita" name="fechaCita">
-            </p>
-            <p>
-                <label for="horaCita">Hora de la cita</label>
-                <input type="datetime-local" name="horaCita" id="horaCita">
+                <label for="horaCita">Fecha y hora de la cita</label>
+                <input type="datetime-local" name="fechaCita" id="fechaCita">
             </p>
             <p>
                 <label for="motivoCita">Motivo</label>
@@ -70,8 +65,8 @@
         </form>
         <div class="caja-botones-login enFila">
             <button type="button" id="enviarCitaUser" class="boton" onclick="enviarCitaUser()">Enviar</button><br>
-            <button type="button" id="editarCitaUser" class="boton" onclick="editarCitaUser()" disabled>Editar</button><br>
-            <button type="button" id="editarCitaUser" class="boton" onclick="eliminarCitaUser()" disabled>Eliminar</button><br>
+            <button type="button" id="editarCitaUser" class="boton" onclick="editarCitaUser()" disabled="disabled">Editar</button><br>
+            <button type="button" id="eliminarCitaUser" class="boton" onclick="eliminarCitaUser()" disabled>Eliminar</button><br>
             <button type="button" id="botonResetAltaUser" class="boton" onclick="resetCitaUser()">Cancelar</button>
         </div>
 
