Iniciando funcionalidad de proyectos en Administracion

--- a/usuariosAdmin.html
+++ b/usuariosAdmin.html
@@ -5,6 +5,8 @@
             <input type="button" class="boton" value="Perfil" id="btnPerfil" onclick="cargarPerfil()">
             <input type="button" class="boton" value="Citas" id="btnCitas" onclick="cargarCitasBtn()">
             <input type="button" class="boton" value="Admin" id="btnAdmin" onclick="cargarUsuarios()">
+            <input type="button" class="boton" value="Proyectos" id="btnProyectos" onclick="cargarProyectos()" disabled>
+            <input type="button" class="boton" value="Noticias" id="btnNoticias" disabled>
         </div>
     </aside>
     <div class="contenidoAdmin">
@@ -77,6 +79,13 @@
                 <button type="button" id="botonResetAltaUser" class="boton" onclick="resetCitaUser()">Cancelar</button>
             </div>
         </div>
+    </section>
+    <section class="boxProyectos">
+        <h2>Proyectos</h2>
+        <div class="divTableProyectos">
+        </div>
+
+        
     </section>
     </div>
 </div>
