terminado CRUD simple proyectos y pequeñas mejoras a los botones

--- a/usuariosAdmin.html
+++ b/usuariosAdmin.html
@@ -113,7 +113,7 @@
             <div class="caja-botones-login enFila">
                 <button type="button" id="enviarProyecto" class="boton" onclick="enviarProyecto()">Enviar</button><br>
                 <button type="button" id="editarProyecto" class="boton" onclick="editarProyecto()"
-                    disabled="disabled">Editar</button><br>
+                    disabled >Editar</button><br>
                 <button type="button" id="eliminarProyecto" class="boton" onclick="eliminarProyecto()"
                     disabled>Eliminar</button><br>
                 <button type="button" id="resetProyecto" class="boton" onclick="resetProyecto()">Cancelar</button>
